# python-anything

./: .pre-commit-config.yaml  README.md  copier.yml  justfile  pyproject.toml  renovate.json5  sandbox.Dockerfile  zizmor.yml
.github/workflows/: test-template.yml
template/: .pre-commit-config.yaml  LICENSE.jinja  README.md.jinja  pyproject.toml.jinja  ruff.toml.jinja
template/.github/workflows/: tests.yml  tests.yml.jinja
template/src/tests/: test_sample.py
